# Jarvis-bot

./: .editorconfig  .eslintrc.json  .gitignore  README.md  bot.js  config.json  index.js  package-lock.json  package.json  pyproject.toml
commands/: aviso.js  clear.js  ping.js
scripts/: commandsReader.js
src/discord_api/: discord_client.py
src/openai_api/: openapi_connector.py
