[tool.poetry]
name = "jarvis-bot"
version = "0.1.0"
description = ""
authors = ["lucas lopes <lopes@arquia.com>"]
readme = "README.md"
packages = [{include = "jarvis_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.3"
python-dotenv = "^1.0.0"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
